[gd_scene load_steps=13 format=3 uid="uid://bcy0ert7kw1qg"]

[ext_resource type="Texture2D" uid="uid://dgxjd277rgc3i" path="res://art/ocean.png" id="1_0xy5b"]
[ext_resource type="Script" path="res://main.gd" id="1_kslgk"]
[ext_resource type="PackedScene" uid="uid://bw14ijvmqcwcv" path="res://fish_hook.tscn" id="2_ljhjs"]
[ext_resource type="PackedScene" uid="uid://cxrv3ctyfqr2b" path="res://hudddddddddddddddddddddddddddddddd.tscn" id="2_va0fa"]
[ext_resource type="PackedScene" uid="uid://bpofs38un3eui" path="res://phish.tscn" id="4_bw0ws"]

[sub_resource type="AtlasTexture" id="AtlasTexture_yaeh0"]
atlas = ExtResource("1_0xy5b")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_x0g0s"]
atlas = ExtResource("1_0xy5b")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_82tkq"]
atlas = ExtResource("1_0xy5b")
region = Rect2(0, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_i6o28"]
atlas = ExtResource("1_0xy5b")
region = Rect2(32, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_7x7rs"]
atlas = ExtResource("1_0xy5b")
region = Rect2(0, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_r1fj2"]
atlas = ExtResource("1_0xy5b")
region = Rect2(32, 64, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_gk6e4"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_yaeh0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x0g0s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_82tkq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i6o28")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7x7rs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r1fj2")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[node name="Main" type="Node2D"]
script = ExtResource("1_kslgk")
mob_scene = ExtResource("2_ljhjs")

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]
motion_mirroring = Vector2(47, 0)

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="ParallaxBackground/ParallaxLayer"]
texture_filter = 1
position = Vector2(540, 262)
scale = Vector2(35.2266, 32.9891)
sprite_frames = SubResource("SpriteFrames_gk6e4")
frame_progress = 0.320921

[node name="StartPosition" type="Marker2D" parent="."]
position = Vector2(240, 450)
gizmo_extents = 0.0

[node name="HUD" parent="." instance=ExtResource("2_va0fa")]

[node name="Phish" parent="." instance=ExtResource("4_bw0ws")]
position = Vector2(1, 135)

[node name="ScoreTimer" type="Timer" parent="."]

[node name="StartTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="Fish Hook" parent="." instance=ExtResource("2_ljhjs")]

[node name="MobTimer" type="Timer" parent="."]

[connection signal="start_game" from="HUD" to="." method="new_game"]
[connection signal="start_game" from="HUD" to="Fish Hook" method="_on_hud_start_game"]
[connection signal="hit" from="Phish" to="." method="game_over"]
[connection signal="timeout" from="ScoreTimer" to="." method="_on_score_timer_timeout"]
[connection signal="timeout" from="StartTimer" to="." method="_on_start_timer_timeout"]
[connection signal="timeout" from="MobTimer" to="." method="_on_mob_timer_timeout"]
